src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__multiple_trait_bounds.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 6,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    bounds: [
                                        Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 8,
                                                                    end: 13,
                                                                    start_line: 1,
                                                                    start_col: 9,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 8,
                                                        end: 13,
                                                        start_line: 1,
                                                        start_col: 9,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 8,
                                                end: 13,
                                                start_line: 1,
                                                start_col: 9,
                                            },
                                        },
                                        Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 4,
                                                                },
                                                                span: Span {
                                                                    start: 16,
                                                                    end: 21,
                                                                    start_line: 1,
                                                                    start_col: 17,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 16,
                                                        end: 21,
                                                        start_line: 1,
                                                        start_col: 17,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 16,
                                                end: 21,
                                                start_line: 1,
                                                start_col: 17,
                                            },
                                        },
                                        Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Span {
                                                                    start: 24,
                                                                    end: 31,
                                                                    start_line: 1,
                                                                    start_col: 25,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 24,
                                                        end: 31,
                                                        start_line: 1,
                                                        start_col: 25,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 24,
                                                end: 31,
                                                start_line: 1,
                                                start_col: 25,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 5,
                                        end: 31,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 4,
                            end: 32,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 6,
                                    },
                                    span: Span {
                                        start: 33,
                                        end: 34,
                                        start_line: 1,
                                        start_col: 34,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 33,
                                end: 34,
                                start_line: 1,
                                start_col: 34,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 36,
                                                    end: 37,
                                                    start_line: 1,
                                                    start_col: 37,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 36,
                                        end: 37,
                                        start_line: 1,
                                        start_col: 37,
                                    },
                                },
                            ),
                            span: Span {
                                start: 36,
                                end: 37,
                                start_line: 1,
                                start_col: 37,
                            },
                        },
                        span: Span {
                            start: 33,
                            end: 37,
                            start_line: 1,
                            start_col: 34,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 39,
                            end: 41,
                            start_line: 1,
                            start_col: 40,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 41,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 41,
        start_line: 1,
        start_col: 1,
    },
}
